# zuoye

./: Procfile  app.py  inventory_system.py  pyproject.toml  商品出库管理系统.html
templates/: base.html
web_inventory/: app.py
web_inventory/templates/: outbound.html  products.html  query.html
